--- a/src/app/account/account-form/account-form.component.html
+++ b/src/app/account/account-form/account-form.component.html
@@ -3,13 +3,11 @@
   <div class="field-group">
     <label>
       First Name
-      <input type="text" [field]="form().firstName" />
-      <app-validation-errors [fieldState]="form().firstName()" />
+      <input type="text" />
     </label>
     <label>
       Last Name
-      <input type="text" [field]="form().lastName" />
-      <app-validation-errors [fieldState]="form().lastName()" />
+      <input type="text" />
     </label>
   </div>
 </div>
