--- a/src/app/account/preferences-form/preferences-form.component.html
+++ b/src/app/account/preferences-form/preferences-form.component.html
@@ -2,9 +2,8 @@
   <h3>Preferences</h3>
   <div class="field-group">
     <label class="checkbox-label">
-      <input type="checkbox" [field]="form().marketingOptIn" />
+      <input type="checkbox" />
       <span>Receive marketing emails</span>
     </label>
   </div>
 </div>
-
