--- a/src/app/shipping/address-form/address-form.component.html
+++ b/src/app/shipping/address-form/address-form.component.html
@@ -3,26 +3,21 @@
   <div class="field-group">
     <label>
       Street
-      <input type="text" [field]="form().street" />
-      <app-validation-errors [fieldState]="form().street()" />
+      <input type="text" />
     </label>
     <div class="row">
       <label>
         City
-        <input type="text" [field]="form().city" />
-        <app-validation-errors [fieldState]="form().city()" />
+        <input type="text" />
       </label>
       <label>
         State
-        <input type="text" [field]="form().state" />
-        <app-validation-errors [fieldState]="form().state()" />
+        <input type="text" />
       </label>
       <label>
         ZIP
-        <input type="text" [field]="form().zip" />
-        <app-validation-errors [fieldState]="form().zip()" />
+        <input type="text" />
       </label>
     </div>
   </div>
 </div>
-
